<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/image_song"
        android:layout_width="@dimen/song_image_width"
        android:layout_height="@dimen/song_image_height"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@color/color_material_purple_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/example_songname"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintStart_toEndOf="@+id/image_song"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/example_artist"
        app:layout_constraintStart_toEndOf="@+id/image_song"
        app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

    <TextView
        android:id="@+id/text_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/example_like"
        app:layout_constraintStart_toEndOf="@+id/image_song"
        app:layout_constraintTop_toBottomOf="@+id/text_artist" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/ic_if_download2_172461"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_slim"
        android:layout_marginBottom="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:background="@color/color_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></View>

</android.support.constraint.ConstraintLayout>